# Multi-Purpose-Discord-Bot

./: .gitignore  README.md  bot.py  package.json  pyproject.toml  replit.nix  requirements.txt
cogs/: ElsworldNotificationsCog.py  MusicCog.py  R6StatsCog.py  SteamTrackerCog.py  r6.py
