[tool.poetry]
name = "dcbot"
version = "0.1.0"
description = ""
authors = ["Kevin <kevintsai010111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.11.11"
python-dotenv = "^1.0.1"
pytz = "^2024.2"
requests = "^2.32.3"
yt-dlp = "^2025.1.15"
poetry-plugin-export = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
